# ss-training

./: .profile  Dockerfile  README.md  docker_run.sh  install_protobuf.sh
Common/: Common.mk
Day1/Assign1/: .profile  Dockerfile  docker_run.bat  docker_run.sh
Day10/: Makefile
Day10/src/: main.cpp
Day11/: Makefile
Day11/src/: main.cpp
Day12/: Makefile
Day12/src/: main.cpp
Day13/: Makefile
Day13/src/: main.cpp  shapes.cpp  shapes.h
Day14/Assign1/: Makefile
Day14/Assign2/: Makefile
Day15/: Makefile
Day15/src/: main.cpp
Day16/: Makefile
Day16/src/: main.cpp
Day17/: Makefile
Day17/src/: account.h  main.cpp
Day18/: Makefile
Day18/src/: main.cpp
Day19/: Makefile
Day19/src/: main.cpp
Day2/Assign1/: Makefile
Day2/Assign2/: README.md
Day2/Assign3/: Makefile  README.md
Day2/Assign4/: Makefile  README.md
Day2/Assign5/: Makefile  README.md
Day20/src/: main.cpp
Day23/Assign2/: README.md
Day24/: Makefile
Day24/src/: main.cpp
Day25/AsyncAccumulate/: Makefile
Day25/ParallelAccumulate/: Makefile
Day28/: Makefile
Day28/src/: main.cpp
Day3/Assign1/: Makefile
Day3/Assign2/: Makefile
Day3/Assign3/: Makefile
Day4/Assign1/: README.md
Day4/Assign2/: Makefile
Day4/Assign3/: README.md
Day4/Assign4/: Makefile  README.md
Day4/Assign5/: README.md
Day5/: Makefile
Day5/src/: main.cpp
Day6/Assign1/: Makefile
Day6/Assign2/: Makefile
Day6/Assign3/: Makefile
Day8/: Makefile
HolidayPractice/LongMultiplication/Version2/: CMakeLists.txt
HolidayPractice/LongMultiplication/Version2/src/: BigNumber.cpp  BigNumber.h
(+87 files in other folders)
